2003-08-15  Duncan Mak  <duncan@ximian.com>

	* doc/mysql: Change references to ByteFX.Data.MySQLClient to the
	correct ByteFX.Data.MySqlClient (note the change in
	capitalization). Thanks to Tom Wagner <Tom.Wagner@wacker.com> for
	spotting the error.

2003-08-15  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/bug-47295.cs: Regression test for bug #47295.

2003-08-11  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am (assemblies_DATA): Add Mono.Cairo.dll.

Sun Aug  3 21:12:13 BST 2003 Malte Hildingson <malte@amy.udd.htu.se>

	* configure.in: added FPU test for ARM.

Thu Jul 31 16:19:07 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* configure.in, etc.: portability fixes and support for
	buidling outside the srcdir from Laurent Morichetti <l_m@pacbell.net>.

2003-07-22  Duncan Mak  <duncan@ximian.com>
       
        * runtime/Makefile.am: Remove sqlsharp as we no longer distribute it.

2003-07-22  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/Makefile.am: Add missing test. Make tests interruptable
	by Ctrl-C. Add testinterp target to run the tests with the interpreter.
	Do not try to build vararg.cs under mcs.

	* configure.in: Fix detection of GC_gcj_malloc.

2003-07-14  Jerome Laban <jlaban@wanadoo.fr>

	* acconfig.h:
	* configure.in: Check for gethostbyname2_r availability.
	* data/machine.config: Added section system.net/settings. Added
	option for IPv6 availability.	

2003-07-13  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/cattr-object.cs: Make it run under both mono and MS.NET.

	* mono/tests/struct.cs: Add test for unboxing trampolines.

	* mono/tests/bug-27420.cs: new regression test.

	* mono/tests/Makefile.am: skip vararg test since it does not compile 
	under mono. Add testinterp target. Add new tests.
	
2003-07-10  Martin Willemoes Hansen

	* doc/web/team.xml : Modified my tasks a bit.

2003-07-01  Paolo Molaro <lupus@ximian.com>

	* acconfig.h, configure.in: added bundle support.

2003-06-10  Dick Porter  <dick@ximian.com>
